--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T07:43:47.708561Z",
-     "start_time": "2024-09-30T07:43:42.619900Z"
+     "end_time": "2024-10-05T16:52:14.548153Z",
+     "start_time": "2024-10-05T16:52:07.840567Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,55 @@
    ],
    "id": "df916eec91588e53",
    "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T16:52:25.932177Z",
+     "start_time": "2024-10-05T16:52:25.911165Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "full_data['test'].shape",
+   "id": "b894c85cffc4793a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(511, 3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-05T16:55:57.454879Z",
+     "start_time": "2024-10-05T16:55:57.423548Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "full_data['dev'].shape",
+   "id": "3403591c22c6c875",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(570, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -348,6 +396,14 @@
    "id": "bbc1f9b3f34e61d0",
    "outputs": [],
    "execution_count": 56
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "data = data",
+   "id": "64ea4836c274e5f"
   }
  ],
  "metadata": {
