--- a/model/bert_train_1.ipynb
+++ b/model/bert_train_1.ipynb
@@ -1572,8 +1572,8 @@
     },
     "outputId": "ed08bf86-979b-46c3-925c-379cd424a8a7",
     "ExecuteTime": {
-     "end_time": "2024-10-29T10:44:51.286254Z",
-     "start_time": "2024-10-29T10:44:50.049167Z"
+     "end_time": "2024-10-29T10:54:48.332568Z",
+     "start_time": "2024-10-29T10:54:47.982718Z"
     }
    },
    "cell_type": "code",
@@ -1584,11 +1584,11 @@
     "\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "tokenizer = BertTokenizerFast.from_pretrained(model_path)\n",
-    "nlp = pipeline(\"sentiment-analysis\", model=model, tokenizer=tokenizer)"
+    "nlp = pipeline(\"text-classification\", model=model, tokenizer=tokenizer)"
    ],
    "id": "2f1170b4aeb3595",
    "outputs": [],
-   "execution_count": 101
+   "execution_count": 109
   },
   {
    "cell_type": "code",
@@ -1614,8 +1614,8 @@
     },
     "outputId": "11e18ea0-1310-44f5-e3f8-95eecef5a9f3",
     "ExecuteTime": {
-     "end_time": "2024-10-29T10:44:52.469155Z",
-     "start_time": "2024-10-29T10:44:52.305677Z"
+     "end_time": "2024-10-29T10:54:52.417827Z",
+     "start_time": "2024-10-29T10:54:52.349425Z"
     }
    },
    "id": "SpbrlVsvrmZQ",
@@ -1626,19 +1626,19 @@
        "[{'label': 'faulty generalization', 'score': 0.9594514966011047}]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 102
+   "execution_count": 110
   },
   {
    "cell_type": "code",
    "source": [
     "nlp(\"Din moment ce nimeni nu-mi poate arăta o floare care rămâne deschisă pentru totdeauna, toate florile nu rămân deschise pentru totdeauna.\")\n",
     "\n",
-    "# intentional fallacy"
+    "# intentional"
    ],
    "metadata": {
     "colab": {
@@ -1657,8 +1657,8 @@
     },
     "outputId": "5075023a-e990-4546-bf22-709f52f71001",
     "ExecuteTime": {
-     "end_time": "2024-10-29T10:44:54.782711Z",
-     "start_time": "2024-10-29T10:44:54.703541Z"
+     "end_time": "2024-10-29T10:54:57.242016Z",
+     "start_time": "2024-10-29T10:54:57.122662Z"
     }
    },
    "id": "twtL0VPLr8AK",
@@ -1669,12 +1669,12 @@
        "[{'label': 'faulty generalization', 'score': 0.9295602440834045}]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 103
+   "execution_count": 111
   },
   {
    "cell_type": "code",
@@ -1699,8 +1699,8 @@
     },
     "outputId": "5264dc73-3dea-48e6-9a96-2a42d6f3ac80",
     "ExecuteTime": {
-     "end_time": "2024-10-29T10:44:56.873587Z",
-     "start_time": "2024-10-29T10:44:56.804805Z"
+     "end_time": "2024-10-29T10:54:58.418654Z",
+     "start_time": "2024-10-29T10:54:58.302873Z"
     }
    },
    "id": "0bjnKtr-quDq",
@@ -1711,12 +1711,12 @@
        "[{'label': 'faulty generalization', 'score': 0.879109263420105}]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 104
+   "execution_count": 112
   },
   {
    "cell_type": "code",
