--- a/model/bert_train.ipynb
+++ b/model/bert_train.ipynb
@@ -22,7 +22,7 @@
     "import wandb\n",
     "from torch import cuda\n",
     "from transformers import pipeline\n",
-    "from utils.data_utils import read_data, filter_fallacies, encode_labels, plot_training_curve, get_file_name\n",
+    "from utils.data_utils import read_data, filter_fallacies, encode_labels, plot_training_curve, get_file_name,plot_learning_curve\n",
     "from transformers import BertForSequenceClassification\n",
     "from transformers import TrainingArguments, Trainer\n",
     "from model.BERT import compute_metrics_wandb, DataLoader\n",
